# mirador

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  config.sample.toml  default.nix  flake.nix  install.sh  package.nix
.github/workflows/: pre-release.yml  pre-releases.yml  release-on-demand.yml  release.yml  releases.yml
assets/: mirador-watch@.service
src/: cli.rs  config.rs  imap.rs  main.rs
src/account/: config.rs  wizard.rs
src/account/arg/: name.rs
src/account/command/: configure.rs  doctor.rs  mod.rs  watch.rs
src/backend/: config.rs  mod.rs  wizard.rs
src/config/: mod.rs
src/manual/: command.rs
