[package]
name = "mirador"
description = "CLI to watch mailbox changes"
version = "1.0.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["command-line-utilities", "email"]
keywords = ["cli", "email", "watch", "imap", "maildir"]
homepage = "https://github.com/pimalaya/"
documentation = "https://github.com/pimalaya/mirador/"
repository = "https://github.com/pimalaya/mirador/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = [
  "imap",
  "maildir",
  #"keyring",
  #"oauth2",
  "wizard",
]

imap = ["email-lib/imap", "pimalaya-tui/imap"]
maildir = ["email-lib/maildir", "pimalaya-tui/maildir"]

keyring = ["dep:keyring-lib", "email-lib/keyring", "pimalaya-tui/keyring"]
oauth2 = ["email-lib/oauth2", "pimalaya-tui/oauth2", "keyring"]
wizard = ["email-lib/autoconfig", "pimalaya-tui/wizard"]

[build-dependencies]
pimalaya-tui = { version = "0.2", default-features = false, features = ["build-envs"] }

[dependencies]
async-ctrlc = { version = "1.2", features = ["termination"] }
async-trait = "0.1"
clap = { version = "4.4", features = ["derive", "wrap_help", "env"] }
clap_complete = "4.4"
clap_mangen = "0.2"
color-eyre = "0.6"
email-lib = { version = "0.26", default-features = false, features = ["tokio-rustls", "watch", "notify", "derive"] }
pimalaya-tui = { version = "0.2", default-features = false, features = ["email", "path", "cli", "config", "tracing"] }
keyring-lib = { version = "1", optional = true, default-features = false, features = ["tokio", "rustls"] }
serde = { version = "1", features = ["derive"] }
shellexpand-utils = "=0.2.1"
tokio = { version = "1.23", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
