[package]
name = "mirador"
description = "CLI to watch mailbox changes"
version = "1.0.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "AGPL-3.0-only"
categories = ["command-line-utilities", "email"]
keywords = ["cli", "email", "watch", "imap", "maildir"]
homepage = "https://pimalaya.org"
documentation = "https://github.com/pimalaya/mirador"
repository = "https://github.com/pimalaya/mirador"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["imap", "rustls-ring"]

imap = ["dep:io-imap", "pimalaya-toolbox/imap"]

native-tls = ["pimalaya-toolbox/native-tls"]
rustls-aws = ["pimalaya-toolbox/rustls-aws"]
rustls-ring = ["pimalaya-toolbox/rustls-ring"]

vendored = ["pimalaya-toolbox/vendored"]

[build-dependencies]
pimalaya-toolbox = { version = "0.0.4", default-features = false, features = ["build"] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false }
clap = { version = "4.4", features = ["derive", "env", "wrap_help"] }
ctrlc = { version = "3.5", features = ["termination"] }
dirs = "6"
io-imap = { version = "0.0.1", default-features = false, optional = true }
io-process = { version = "0.0.2", default-features = false, features = ["std", "serde"] }
io-stream = { version = "0.0.2", default-features = false, features = ["std"] }
log = "0.4"
pimalaya-toolbox = { version = "0.0.4", default-features = false, features = ["config", "terminal", "secret"] }
rfc2047-decoder = "1"
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
shellexpand = "3.1"
url = { version = "2.2", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
uds_windows = "1"

[patch.crates-io]
io-imap = { git = "https://github.com/pimalaya/io-imap", branch = "io" }
pimalaya-toolbox.git = "https://github.com/pimalaya/toolbox"
